--- a/packages/beyondinsight_password_safe/data_stream/useraudit/manifest.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/manifest.yml
@@ -3,14 +3,14 @@ type: logs
 streams:
   - input: cel
     title: "Collect beyondinsight User Audit Events"
-    description: "Collect User Auditss from beyondinsight via the beyondinsight Events API"
+    description: "Collect User Audits from beyondinsight via the beyondinsight Events API"
     enabled: true
     template_path: cel.yml.hbs
     vars:
       - name: interval
         type: text
         title: Interval
-        description: Go Duration syntax (e.g., `10s`) for how often to fetch User Auditss
+        description: Go Duration syntax (e.g., `10s`) for how often to fetch User Audits
         show_user: false
         required: true
         default: "10s"
