fix: useraudits testcases

--- a/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing sample logs
+description: Pipeline for processing beyondinsight and password safe user audits 
 processors:
   - rename:
       field: message
@@ -10,9 +10,7 @@ processors:
         - beyondinsight_password_safe.useraudit.AuditID
       target_field: "_id"
 
-####################
-# Scripts for processing input #
-####################
+##################### Scripts for processing input #####################
   - script:
       description: Drops null/empty values recursively.
       lang: painless
@@ -65,9 +63,7 @@ processors:
           ctx.beyondinsight_password_safe.useraudit = keysToSnakeCase(ctx.beyondinsight_password_safe.useraudit);
         }
 
-####################
-# ECS Fields #
-####################
+##################### ECS Fields #####################
   - set:
       field: ecs.version
       value: '8.11.0'
@@ -106,11 +102,36 @@ processors:
       value: "{{{beyondinsight_password_safe.useraudit.user_name}}}"
       ignore_empty_value: true           
 
-  #################### Set @timestamp ##########################
-  # - date:
-  #     field: "beyondinsight_password_safe.useraudit.create_date"
-  #     target_field: "@timestamp"
-  #     formats: ["ISO8601"]
+ ###################### Override host.ip ######################
+  - set:
+      if: "ctx.beyondinsight_password_safe.useraudit.ipaddress != null && !ctx.beyondinsight_password_safe.useraudit.ipaddress.isEmpty()"
+      field: host.ip
+      value: ["{{beyondinsight_password_safe.useraudit.ipaddress}}"]
+
+
+###################### Convert host.ip to a Valid IP Type ######################
+  - script:
+      if: "ctx.host?.ip != null && ctx.host.ip.size() > 0"
+      lang: painless
+      source: |
+        for (int i = 0; i < ctx.host.ip.size(); i++) {
+          def ip = ctx.host.ip[i];
+          if (!(ip ==~ /^([0-9]{1,3}\.){3}[0-9]{1,3}$/)) {
+            throw new IllegalArgumentException("Invalid IP format: " + ip);
+          }
+        }
+
+###################### GeoIP Processor ######################
+  - geoip:
+      if: "ctx.host?.ip != null && ctx.host.ip.size() > 0"
+      field: host.ip.0
+      target_field: geo
+
+#################### Set @timestamp ##########################
+  - date:
+      field: "beyondinsight_password_safe.useraudit.create_date"
+      target_field: "@timestamp"
+      formats: ["ISO8601"]
 
  #################### User Audit Log fields ###################
   - rename:
