--- a/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -103,37 +103,31 @@ processors:
       ignore_empty_value: true           
 
  ###################### Override host.ip ######################
+  - convert:
+      field: beyondinsight_password_safe.useraudit.ipaddress
+      target_field: beyondinsight_password_safe.useraudit.ipaddress
+      type: ip
+      ignore_missing: true
+      if: ctx.beyondinsight_password_safe.useraudit?.ipaddress != null && ctx.beyondinsight_password_safe.useraudit.ipaddress != ''
+      on_failure:
+        - append:
+            field: error.message
+            value: 'Processor {{{_ingest.on_failure_processor_type}}} in pipeline {{{_ingest.on_failure_pipeline}}} failed with message: {{{_ingest.on_failure_message}}}'
   - set:
-      if: "ctx.beyondinsight_password_safe.useraudit.ipaddress != null && !ctx.beyondinsight_password_safe.useraudit.ipaddress.isEmpty()"
-      field: host.ip
-      value: ["{{beyondinsight_password_safe.useraudit.ipaddress}}"]
-
-
-###################### Convert host.ip to a Valid IP Type ######################
-  - script:
-      if: "ctx.host?.ip != null && ctx.host.ip.size() > 0"
-      lang: painless
-      source: |
-        for (int i = 0; i < ctx.host.ip.size(); i++) {
-          def ip = ctx.host.ip[i];
-          if (!(ip ==~ /^([0-9]{1,3}\.){3}[0-9]{1,3}$/)) {
-            throw new IllegalArgumentException("Invalid IP format: " + ip);
-          }
-        }
-
-###################### GeoIP Processor ######################
+      field: source.ip
+      copy_from: beyondinsight_password_safe.useraudit.ipaddress
+      ignore_empty_value: true
   - geoip:
-      if: "ctx.host?.ip != null && ctx.host.ip.size() > 0"
-      field: host.ip.0
-      target_field: geo
-
-#################### Set @timestamp ##########################
+      field: source.ip
+      target_field: source.geo
+      tag: geoip_source_ip
+      ignore_missing: true
+################### Set @timestamp ##########################
   - date:
-      field: "beyondinsight_password_safe.useraudit.create_date"
-      target_field: "@timestamp"
-      formats: ["ISO8601"]
-
- #################### User Audit Log fields ###################
+     field: "beyondinsight_password_safe.useraudit.create_date"
+     target_field: "@timestamp"
+     formats: ["ISO8601"]
+ ################### User Audit Log fields ###################
   - rename:
       field: "beyondinsight_password_safe.useraudit.user"
       target_field: "user.name"
