--- a/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -113,14 +113,13 @@ processors:
         - append:
             field: error.message
             value: 'Processor {{{_ingest.on_failure_processor_type}}} in pipeline {{{_ingest.on_failure_pipeline}}} failed with message: {{{_ingest.on_failure_message}}}'
-  - set:
-      field: source.ip
-      copy_from: beyondinsight_password_safe.useraudit.ipaddress
-      ignore_empty_value: true
+  - append:
+      field: host.ip
+      value: "{{{beyondinsight_password_safe.useraudit.ipaddress}}}"
+
   - geoip:
-      field: source.ip
-      target_field: source.geo
-      tag: geoip_source_ip
+      field: host.ip
+      target_field: host.geo
       ignore_missing: true
 ################### Set @timestamp ##########################
   - date:
