--- a/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/useraudit/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing beyondinsight and password safe user audits 
+description: Pipeline for processing BeyondInsight User Audit Events 
 processors:
   - rename:
       field: message
