--- a/packages/beyondinsight_password_safe/data_stream/managed_system/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managed_system/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing Managed Accounts logs
+description: Pipeline for processing Managed System logs
 processors:
   - rename:
       field: message
