- Refactor managed system data stream

--- a/packages/beyondinsight_password_safe/data_stream/managedsystem/fields/fields.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedsystem/fields/fields.yml
@@ -2,7 +2,7 @@
   title: 'Beyond Insight Password Safe Fields'
   type: group
   fields:
-    - name: managed_system
+    - name: managedsystem
       type: group
       description: 'Managed System related data fields'
       fields:
