- refactor title and description in managedaccount, managedsystem and session data stream

--- a/packages/beyondinsight_password_safe/data_stream/managedaccount/manifest.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedaccount/manifest.yml
@@ -1,9 +1,9 @@
-title: "Managed Accounts"
+title: "BeyondInsight Password Safe Managed Accounts"
 type: logs
 streams:
   - input: cel
-    title: Managed Accounts Logs
-    description: Collect Managed Accounts logs
+    title: BeyondInsight Password Safe Managed Accounts Logs
+    description: BeyondInsight Password Safe Managed Accounts Request Settings
     enabled: true
     template_path: cel.yml.hbs
     vars:
