--- a/packages/beyondinsight_password_safe/data_stream/managedsystem/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedsystem/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing Managed System logs
+description: Pipeline for processing BeyondInsight Password Safe Managed Systems logs
 processors:
   - rename:
       field: message
