--- a/packages/beyondinsight_password_safe/data_stream/managedaccount/fields/fields.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedaccount/fields/fields.yml
@@ -1,5 +1,5 @@
 - name: beyondinsight_password_safe
-  title: 'Beyond Insight Password Safe Fields'
+  title: 'BeyondInsight Password Safe Managed Accounts Fields'
   type: group
   fields:
     - name: managedaccount
