--- a/packages/beyondinsight_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for processing sample logs
+description: Pipeline for processing BeyondInsight Password Safe Sessions logs
 processors:
   - rename:
       field: message
