chore: drop processor and formating with initial system testing

--- a/packages/beyondinsight_password_safe/data_stream/managedaccount/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedaccount/elasticsearch/ingest_pipeline/default.yml
@@ -93,7 +93,8 @@ processors:
       field: event.module
       value: beyondinsight_password_safe
 
-
+  - drop:
+      if: ctx.beyondinsight_password_safe.managedaccount?.code == '401'
 ####################
 # Managed Account Fields #
 ####################
