--- a/packages/beyondinsight_password_safe/data_stream/managedsystem/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/managedsystem/elasticsearch/ingest_pipeline/default.yml
@@ -93,6 +93,8 @@ processors:
       field: event.module
       value: beyondinsight_password_safe
 
+  - drop:
+      if: ctx.beyondinsight_password_safe.managedsystem?.code == '401'
 on_failure:
   - append:
       field: error.message
