--- a/packages/beyondinsight_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/beyondinsight_password_safe/data_stream/session/elasticsearch/ingest_pipeline/default.yml
@@ -117,7 +117,8 @@ processors:
       formats: ["ISO8601"]
       ignore_failure: false
 
-
+  - drop:
+      if: ctx.beyondinsight_password_safe.session?.code == '401'
 ####################
 # Session Specific Fields #
 ####################
