chore: integration name

--- a/packages/beyondinsight_password_safe/manifest.yml
+++ b/packages/beyondinsight_password_safe/manifest.yml
@@ -24,7 +24,7 @@ icons:
     size: 32x32
     type: image/svg+xml
 policy_templates:
-  - name: BeyondInsight
+  - name: beyondinsight
     title: BeyondInsight Events
     description: Collect events from BeyondInsight Events Reporting
     inputs:
